Fix fieldset appearance on mobile

--- a/css/form.css
+++ b/css/form.css
@@ -1,93 +1,93 @@
 #contact-section {
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
-  h3 {
-    font-size: 2em;
-    margin-bottom: 10px;
-  }
-  
-  .form-group,
-  .form-group-textarea {
-    display: block;
-    padding: 10px 20px;
-    margin-bottom: 2em;
-    background: none;
-    border-bottom: 1px solid var(--text-icons);
-    color: var(--primary-text);
-  }
-  
-  .form-group-textarea {
-    height: 150px;
-    padding: 1.5em;
-  }
-  
-  fieldset {
-    padding: 20px;
-    margin-bottom: 2em;
-    background: none;
-    color: var(--primary-text);
-    border: 1px solid var(--text-icons);
-    border-radius: 5px;
-  }
-  
-  fieldset legend {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-  
-  #btn-submit {
-    padding: 10px 20px;
-    margin: 1em;
-    border: none;
-    text-transform: uppercase;
-    background-color: var(--accent-color);
-    border-radius: 20px;
-    cursor: pointer;
-    box-shadow: 1px 3px 11px -5px #334299;
-  }
-  
-  #btn-submit:hover {
-    background-color: var(--text-icons);
-    box-shadow: none;
-  }
-  
-  label {
-    margin-left: 10px;
-    display: block;
-  }
-  
-  @media screen and (min-width: 768px) {
-    .form-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 50vh 50 vh;
-    }
+  padding: 20px;
+  box-sizing: border-box;
+}
 
-    #name {
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
-    }
+h3 {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
 
-    #surname {
-      grid-column: 2 / 3;
-      grid-row: 1 / 2;
-    }
+.form-group,
+.form-group-textarea {
+  display: block;
+  padding: 10px 20px;
+  margin-bottom: 2em;
+  background: none;
+  border-bottom: 1px solid var(--text-icons);
+  color: var(--primary-text);
+}
 
-    #phone {
-      grid-column: 1 / 2;
-      grid-row: 2 / 3;
-    }
+.form-group-textarea {
+  height: 150px;
+  padding: 1.5em;
+}
 
-    #github {
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
-    }
-  
-    label {
-      display: initial;
-    }
+
+.fieldset {
+  padding: 10px;
+  margin-bottom: 2em;
+  background: none;
+  color: var(--primary-text);
+  border: 1px solid var(--text-icons);
+  border-radius: 5px;
+  display: block;
+
+}
+
+legend {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+
+#btn-submit {
+  padding: 10px 20px;
+  margin: 1em;
+  border: none;
+  text-transform: uppercase;
+  background-color: var(--dark-primary-color);
+  border-radius: 20px;
+  cursor: pointer;
+  box-shadow: 1px 3px 11px -5px var(--dark-primary-color);
+}
+
+#btn-submit:hover {
+  background-color: var(--text-icons);
+  box-shadow: none;
+}
+
+
+@media screen and (min-width: 768px) {
+  .form-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50vh 50 vh;
   }
-  
+
+  #name {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  #surname {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
+  #phone {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+
+  #github {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .fieldset > div {
+    display: initial;
+  }
+
+}
